fixed contrast for all category icons

--- a/assets/global.scss
+++ b/assets/global.scss
@@ -13,14 +13,14 @@
   --mid-grey: #595959;
   --lightGray: #ececec;
   --red: #dc2626;
-  // --orange: #f59e0b;
   --dark-orange: #b45309;
-  --green: #00774f;
+  --green: #007736;
   --blue: #2b6dd8;
   --dark-blue: #0f44d8;
   --indigo: #312e81;
   --purple: #5b21b6;
-  --pink: #ec4899;
+  --violet: #a316a3;
+  --pink: #DA1678;
   /* intentions */
   --background-color: var(--white);
   --primary-color: var(--gold);
@@ -32,15 +32,16 @@
   --hover: var(--lightGray);
   --footer: var(--grey);
   --calendar-band: var(--off-white);
+
   --covid: var(--purple);
   --entertainment: var(--red);
   --news: var(--indigo);
   --politics: var(--pink);
-  --opinion: var(--orange);
+  --opinion: var(--violet);
   --science: var(--green);
   --technology: var(--blue);
-  --sports: var(--dark-orange);
   --activities: var(--dark-orange);
+
   /* new intentions */
   --mobile-nav-background: var(--primary-color);
   --mobile-nav-text: var(--white);
